# SpiralloRunner

./: CMakeLists.txt  DatasetsConfig.cpp  DatasetsConfig.hpp  ExtrasSetups_ParallelLaser.hpp  ExtrasSetups_ToF.hpp  SanityTestsSetups_ParallelLaser.hpp  SanityTestsSetups_ParallelLaser_Naive.hpp  SanityTestsSetups_ParallelLaser_VX.hpp  main.cpp
